[package]
name = "rust-ethers-utils"
version = "0.1.0"
edition = "2021"
authors = ["tsuigeo <tsuigeo@ensolabs.co>"]

[workspace]
members = [
  "ethers-utils"
]

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["ws", "rustls"] }
tokio = { version = "1.19.2", features = ["full"] }
async-trait = "0.1.56"
ethers-utils = { path = "./ethers-utils" }
teloxide = "0.9"
dotenvy = "0.15.1"

[[example]]
name = "sample_log_fetcher"
path = "examples/sample_log_fetcher.rs"

[[example]]
name = "sample_mempool_listener"
path = "examples/sample_mempool_listener.rs"
